package Ejemplo1;
public class Cita {
  private int fecha;
  private int hora;
  private String motivo;
  private String estado;  
}
