package Ejemplo1;
public class Veterinario {
    private String nombre;
    private String especialidad;
    private int telefono;
    private String email;
    private int horadispo;
}
